backpressure examples and impl improvements